# rv1126_bsp

./: Kconfig  LICENSE  README.md  README_ZH.md
components/bsp/: CMakeLists.txt
components/bsp/include/rkaiq/algos/: rk_aiq_algo_des.h
components/bsp/include/rkaiq/algos/accm/: rk_aiq_types_accm_algo_int.h
components/bsp/include/rkaiq/algos/ae/: rk_aiq_types_ae_algo_int.h  rk_aiq_types_ae_hw.h
components/bsp/include/rkaiq/algos/af/: rk_aiq_uapi_af_int.h
components/bsp/include/rkaiq/algos/ahdr/: rk_aiq_types_ahdr_algo_int.h
components/bsp/include/rkaiq/algos/anr/: rk_aiq_types_anr_algo.h  rk_aiq_types_anr_algo_int.h
components/bsp/include/rkaiq/algos/asharp/: rk_aiq_types_asharp_algo_int.h
components/bsp/include/rkaiq/common/: rk_aiq_pool.h  rk_aiq_types.h  rk_aiq_types_priv.h
components/bsp/include/rkaiq/ipc_server/: rkaiq_tool_sysctl.h  socket_server.h
components/bsp/include/rkaiq/iq_parser/: RkAiqCalibDbTypes.h
components/bsp/include/rkaiq/uAPI/: rk_aiq_user_api_af.h  rk_aiq_user_api_imgproc.h  rk_aiq_user_api_sysctl.h
components/bsp/lib/: libasound.so.2.0.0  libavcodec.so.58.35.100  libavutil.so.56.22.100  libdrm.so.2.4.0  libeasymedia.so.1  librockchip_mpp.so.0  libswresample.so.3.3.100  libv4l2.so.0.0.0  libv4lconvert.so.0.0.0
components/npu/: CMakeLists.txt
projects/hello-world/main/: CMakeLists.txt
projects/hello-world/main/include/: hello.h
projects/hello-world/main/src/: main.c
projects/rknn_yolov5_demo/main/: CMakeLists.txt
projects/rknn_yolov5_demo/main/include/: drm_func.h  postprocess.h
projects/rv1126_vi_yolov5_vo/ai/yolov5/include/: yolov5.h
projects/rv1126_vi_yolov5_vo/ai/yolov5/src/: yolov5.cpp
projects/rv1126_vi_yolov5_vo/compile/: priority.conf
projects/rv1126_vi_yolov5_vo/main/src/: main.cpp
tools/cmake/: gen_binary.cmake  start_app_rv1126.sh
(+7 files in other folders)
